--- a/index.html
+++ b/index.html
@@ -4,10 +4,89 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>This is the develop branch</title>
+    <title>This is a DevOps demo</title>
+
+    <!-- External CSS -->
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+    <!-- HERO -->
+    <header class="hero">
+      <h1>🚀 <span>DevOps</span> Team Demo</h1>
+      <p>
+        Automating delivery, scaling infrastructure, and ensuring reliability
+        through modern DevOps practices.
+      </p>
+      <a href="#pipeline" class="btn">View Pipeline</a>
+    </header>
+
+    <!-- PIPELINE -->
+    <section id="pipeline" class="section">
+      <h2>Our Delivery Pipeline</h2>
+
+      <div class="grid">
+        <div class="card">
+          <h3>Source Control</h3>
+          <p>Version-controlled code with automated triggers.</p>
+        </div>
+
+        <div class="card">
+          <h3>CI/CD</h3>
+          <p>Automated builds, tests, and deployments.</p>
+        </div>
+
+        <div class="card">
+          <h3>Cloud Infrastructure</h3>
+          <p>Scalable infrastructure using Infrastructure as Code.</p>
+        </div>
+
+        <div class="card">
+          <h3>Monitoring</h3>
+          <p>Metrics, logs, and alerts for reliability.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- TOOLS -->
+    <section class="section">
+      <h2>Tooling & Stack</h2>
+
+      <div class="grid">
+        <div class="card">
+          <h3>Containers</h3>
+          <p>Dockerized applications for consistency.</p>
+        </div>
+
+        <div class="card">
+          <h3>Orchestration</h3>
+          <p>Kubernetes for workload management.</p>
+        </div>
+
+        <div class="card">
+          <h3>Automation</h3>
+          <p>CI pipelines and Infrastructure as Code.</p>
+        </div>
+
+        <div class="card">
+          <h3>Security</h3>
+          <p>Shift-left security and policy enforcement.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- CTA -->
+    <section class="section cta">
+      <h2>Demo Ready</h2>
+      <p>This environment demonstrates a modern DevOps workflow.</p>
+      <a href="#" class="btn">Start Demo</a>
+    </section>
+
+    <!-- FOOTER -->
+    <footer>
+      © 2025 DevOps Team · Built for Demo & Automation
+    </footer>
   </body>
 </html>
